ui inspector improvement